--- a/overseas/hardware/detail.html
+++ b/overseas/hardware/detail.html
@@ -392,7 +392,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
 <script type="text/javascript" src="http://cdn.javiermu.com/myappname/res/js/market/market-1.0.0.min.js"></script>
 <script>
     var xmlObj = {
-        total: $('.goods-list').length-1,
+        total: $('.goods-list').length,
         loadedNo:0
     }
     /* xmlLoad */
