--- a/overseas/fashion/fashion_ru.html
+++ b/overseas/fashion/fashion_ru.html
@@ -131,64 +131,66 @@
     </div>
 </div>
 
-<div class="header">
-    <div class="w" style="width:1310px;">
-        <a class="logo-ru" href="http://en.jd.com" style="margin-right:10px;"></a>
+<div class="header-c">
+    <div class="header">
+        <div class="w" style="width:1310px;">
+            <a class="logo-ru" href="http://en.jd.com" style="margin-right:10px;"></a>
 
-        <form class="search-form">
-            <div class="search-operate-box f-fl">
-                <div class="search-cate-title"><span class="search-category-value" id="search-category-value"  catid=""> Все категории </span><s></s><div class="spacer"></div></div>
-                <div class="search-cate-list">
-                    <ul class="j-select-opts">
+            <form class="search-form">
+                <div class="search-operate-box f-fl">
+                    <div class="search-cate-title"><span class="search-category-value" id="search-category-value"  catid=""> Все категории </span><s></s><div class="spacer"></div></div>
+                    <div class="search-cate-list">
+                        <ul class="j-select-opts">
+                        </ul>
+
+                    </div>
+                </div>
+                <div class="search-key-box f-fr">
+                    <input type="text" id="searchKeyWord" name="SearchText" value="" autocomplete="off" maxlength="50" placeholder="Покупки для..." class="search-key">
+                    <input type="button" id="doSearch" value="" class="search-button">
+                </div>
+                <div class="search-key-list" style="display: none;">
+                    <strong></strong>
+                    <ul id="search-result-list">
                     </ul>
 
                 </div>
-            </div>
-            <div class="search-key-box f-fr">
-                <input type="text" id="searchKeyWord" name="SearchText" value="" autocomplete="off" maxlength="50" placeholder="Покупки для..." class="search-key">
-                <input type="button" id="doSearch" value="" class="search-button">
-            </div>
-            <div class="search-key-list" style="display: none;">
-                <strong></strong>
-                <ul id="search-result-list">
-                </ul>
+            </form>
 
-            </div>
-        </form>
+            <ul class="tools-box">
+                <li><a class="cart" href="http://c.en.jd.com/cart/cart.html"><s></s><span>Корзина</span></a></li>
+                <li><a class="wish" href="http://s.en.jd.com/usercenter/wishlist/list.html"><s></s><span>Список желаний</span></a></li>
+                <li class="item-sign">
+                    <div class="sign"><s></s><span>Войти</span></div>
+                    <!-- 登录后 -->
+                    <div style="display: none" class="sign-box s-1">
+                        <div class="spacer"></div>
+                        <div class="mt">
 
-        <ul class="tools-box">
-            <li><a class="cart" href="http://c.en.jd.com/cart/cart.html"><s></s><span>Корзина</span></a></li>
-            <li><a class="wish" href="http://s.en.jd.com/usercenter/wishlist/list.html"><s></s><span>Список желаний</span></a></li>
-            <li class="item-sign">
-                <div class="sign"><s></s><span>Войти</span></div>
-                <!-- 登录后 -->
-                <div style="display: none" class="sign-box s-1">
-                    <div class="spacer"></div>
-                    <div class="mt">
+                            <a href="javascript:void(0);">Добро пожаловать </a>
+                        </div>
+                        <div class="mc">
+                            <p><a target="_blank" href="http://o.en.jd.com/order/orderList.html">Мой Заказ</a></p>
+                            <p><a target="_blank" href="http://s.en.jd.com/usercenter/wishlist/list.html">Мои желания</a></p>
+                            <p><a target="_blank" href="">Настройки аккаунта</a></p>
+                            <a class="btn-join" href="javascript:logout();">Выйти</a>
+                        </div>
+                    </div>
+                    <!-- 登录前 -->
+                    <div class="sign-box s-2">
+                        <div class="spacer"></div>
+                        <div class="mt">
+                            <a class="btn-sign" href="javascript:login();">Войти</a>
 
-                        <a href="javascript:void(0);">Добро пожаловать </a>
+                        </div>
+                        <div class="mc">
+                            <p><a href="javascript:void(0);">Новый покупатель?</a></p>
+                            <a class="btn-join" href="javascript:register();">Регистрация бесплатно</a>
+                        </div>
                     </div>
-                    <div class="mc">
-                        <p><a target="_blank" href="http://o.en.jd.com/order/orderList.html">Мой Заказ</a></p>
-                        <p><a target="_blank" href="http://s.en.jd.com/usercenter/wishlist/list.html">Мои желания</a></p>
-                        <p><a target="_blank" href="">Настройки аккаунта</a></p>
-                        <a class="btn-join" href="javascript:logout();">Выйти</a>
-                    </div>
-                </div>
-                <!-- 登录前 -->
-                <div class="sign-box s-2">
-                    <div class="spacer"></div>
-                    <div class="mt">
-                        <a class="btn-sign" href="javascript:login();">Войти</a>
-
-                    </div>
-                    <div class="mc">
-                        <p><a href="javascript:void(0);">Новый покупатель?</a></p>
-                        <a class="btn-join" href="javascript:register();">Регистрация бесплатно</a>
-                    </div>
-                </div>
-            </li>
-        </ul>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
 <div class="nav">
