--- a/overseas/fashion/fashion_en.html
+++ b/overseas/fashion/fashion_en.html
@@ -542,7 +542,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                             pageDom = pageDom + '<a class="icon" href="javascript:void(0)"></a>';
                     }
                     $('.wrap-slider-page').html(pageDom);
-                    slider.nextPage.click(function(){
+                    slider.nextPage.click(function(e){
                         if(slider.clickFlag == 0){
                         }
                         else {
@@ -554,8 +554,10 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                                 slider.clickFlag = 1;
                             },slider.animateTime+30)
                         }
+                        e.stopPropagation();
+                        return false;
                     })
-                    slider.lastPage.click(function(){
+                    slider.lastPage.click(function(e){
                         if(slider.clickFlag == 0){
                         }
                         else{
@@ -567,7 +569,8 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                                 slider.clickFlag = 1;
                             },slider.animateTime+30)
                         }
-
+                        e.stopPropagation();
+                        return false;
                     })
                 }
             }
