--- a/overseas/fashion/fashion_en.html
+++ b/overseas/fashion/fashion_en.html
@@ -250,7 +250,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
             <a href="#nolink" class="href-map" id="flr1"></a>
             <div class="wrap-1200">
                 <div class="flr-hd">
-                    Newly Discovered
+                    NEWLY DISCOVERED
                 </div>
                 <div class="flr-bd">
                     <ul class="goods-list cf" marketStart="" marketLength="" marketUrl="http://lillian98.github.io/overseas/fashion/js/tjw155af8812ed885.js?t=201507231105" marketTpl='<li><a href="{#recommendUrl#}" target="_blank"><img data-lazy-img="{#image#}" alt="{#recommendName#}" class="goods-img"/><img data-lazy-img="{#defined1#}" alt="{#recommendName#}" class="goods-img-h"/></a></li>' marketOnLoad="xmlLoad(1)"></ul>
@@ -263,7 +263,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
     <a href="#nolink" class="href-map" id="flr2"></a>
     <div class="wrap-1200">
         <div class="flr-hd">
-            trends & shows
+            TRENDS & SHOWS
         </div>
         <div class="flr-bd">
 <!-- S 手风琴 -->
@@ -281,7 +281,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
             <a href="#nolink" class="href-map" id="flr3"></a>
             <div class="wrap-1200">
                 <div class="flr-hd">
-                    Mix & Match
+                    MIX & MATCH
                 </div>
                 <div class="flr-bd">
                     <div class="wrap-slider">
@@ -309,7 +309,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
             <a href="#nolink" class="href-map" id="flr4"></a>
             <div class="wrap-1200">
                 <div class="flr-hd">
-                    Keywords
+                    KEYWORDS
                 </div>
                 <div class="flr-bd">
                     <ul class="goods-list cf" marketStart="" marketLength="" marketUrl="http://lillian98.github.io/overseas/fashion/js/tjw155af8be59a7eb.js?t=201507231105" marketTpl='<li><a href="{#recommendUrl#}" target="_blank"><img data-lazy-img="{#image#}" alt="{#recommendName#}" class="flr4-img"/><span class="layer"></span><img data-lazy-img="{#defined1#}" alt="{#recommendName#}" class="img-hover"/><span class="img-text">{#recommendName#}</span></a></li>' marketOnLoad="xmlLoad(1)"></ul>
@@ -323,7 +323,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
             <a href="#nolink" class="href-map" id="flr5"></a>
             <div class="wrap-1200">
                 <div class="flr-hd">
-                    Features
+                    FEATURES
                 </div>
                 <div class="flr-bd">
                     <ul class="goods-list cf" marketStart="" marketLength="" marketUrl="http://lillian98.github.io/overseas/fashion/js/tjw155af8c7dc8cc6.js?t=201507231105" marketTpl='<li><div class="goods-img"><a href="{#recommendUrl#}" target="_blank"><img data-lazy-img="{#image#}" alt="{#recommendName#}"/></a></div><div class="goods-detail"><div class="goods-name"><a href="{#recommendUrl#}" target="_blank">{#recommendName#}</a></div><i class="goods-name-line"></i><div class="goods-info">{#defined1#}</div></div></li>' marketOnLoad="xmlLoad(1)"></ul>
@@ -336,7 +336,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
             <a href="#nolink" class="href-map" id="flr6"></a>
             <div class="wrap-1200">
                 <div class="flr-hd">
-                    Hot  Category
+                    HOT CATEGORY
                 </div>
                 <div class="flr-bd">
                     <ul class="goods-list cf" marketStart="" marketLength="" marketUrl="http://lillian98.github.io/overseas/fashion/js/tjw155af8d5c6ab46.js?t=201507231105" marketTpl='<li><div class="goods-img"><a href="{#recommendUrl#}" target="_blank"><img data-lazy-img="{#image#}" alt="{#recommendName#}"/></a></div><div class="category"><a href="{#recommendUrl#}" target="_blank">{#recommendName#}</a></div></li>' marketOnLoad="xmlLoad(1)"></ul>
@@ -468,11 +468,11 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
         var liHeight = $('.goods-li').outerHeight();
         var isLowIe9 = false;
         var sfq = {
-                    curIndex:0,
-                    lastIndex:0,
-                    canHover:1,
-                    animateTimeOut:0
-                };
+            curIndex:0,
+            lastIndex:0,
+            canHover:1,
+            animateTimeOut:0
+        };
         var slider = {
             dom:$('.wrap-slider'),
             ctldom:$('.wrap-slider-div'),
@@ -539,7 +539,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                     slider.ctldom.css('marginLeft',-slider.liwidth);
                     var pageDom = '<a class="icon current" href="javascript:void(0)"></a>';
                     for(var i = 1;i<slider.childLength;i++){
-                            pageDom = pageDom + '<a class="icon" href="javascript:void(0)"></a>';
+                        pageDom = pageDom + '<a class="icon" href="javascript:void(0)"></a>';
                     }
                     $('.wrap-slider-page').html(pageDom);
                     slider.nextPage.click(function(e){
@@ -576,7 +576,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
             }
         })())
         if($('body').attr('class')){
-        ($('body').attr('class').indexOf('no-ani') > -1) && (isLowIe9 = true);
+            ($('body').attr('class').indexOf('no-ani') > -1) && (isLowIe9 = true);
         }
         init();
         function init() {
